syntax = "proto3";
package io.harness.perpetualtask.artifact;
option java_multiple_files = true;

message ArtifactCollectionTaskParams {
  string artifact_stream_id = 1;
}
